--- a/parsing/Cargo.toml
+++ b/parsing/Cargo.toml
@@ -4,4 +4,5 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+chrono = { version = "0.4.40", default-features = false }
 rust_lzss = "0.1.1"
