--- a/parsing/Cargo.toml
+++ b/parsing/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2024"
 [dependencies]
 chrono = { version = "0.4.40", default-features = false }
 rust_lzss = "0.1.1"
+
+[dev-dependencies]
+chrono = { version = "0.4.40", default-features = false, features = ["alloc", "clock"] }
