--- a/parsing/Cargo.toml
+++ b/parsing/Cargo.toml
@@ -4,8 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-chrono = { version = "0.4.40", default-features = false }
+chrono = { version = "0.4.40", default-features = false, features = ["serde"] }
 rust_lzss = "0.1.1"
+serde = { version = "1.0.219", features = ["derive"] }
 
 [dev-dependencies]
-chrono = { version = "0.4.40", default-features = false, features = ["alloc", "clock"] }
+chrono = { version = "0.4.40", default-features = false, features = [
+    "alloc",
+    "clock",
+] }
