--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Deploy to GitHub Pages
 
 on:
   # Runs on pushes targeting the default branch
@@ -35,6 +34,8 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+      - name: Set up wasm-pack
+        uses: jetli/wasm-pack-action@v0.4.0
       - name: Install dependencies
         run: npm ci
       - name: Build
