--- a/parsing-wasm/Cargo.toml
+++ b/parsing-wasm/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
-parsing = { path = "../parsing" }
+parsing = { path = "../parsing", features = ["wasm"] }
+serde = { version = "1.0.219", features = ["derive"] }
 serde-wasm-bindgen = "0.6.5"
+serde_bytes = "0.11.17"
+tsify = { version = "0.5.5", features = ["js"] }
 wasm-bindgen = "0.2.100"
