--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=\"./\"",
+    "build": "npm run build-wasm && npm run build-frontend",
+    "build-frontend": "vite build --base=\"./\"",
     "build-wasm": "wasm-pack build parsing-wasm --out-dir ../src/lib/parsing/wasm --target web",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.app.json && tsc -p tsconfig.node.json"
