--- a/libdoodle-wasm/Cargo.toml
+++ b/libdoodle-wasm/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 console_error_panic_hook = "0.1.7"
-libdoodle = { path = "../libdoodle", features = ["wasm"] }
+libdoodle = { git = "https://github.com/SwapdoodleRevival/libdoodle", features = ["wasm"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde-wasm-bindgen = "0.6.5"
 serde_bytes = "0.11.17"
