--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,4 @@ resolver = "3"
 members = ["libdoodle-wasm"]
 
 [patch."https://github.com/swapdoodlerevival/libdoodle"]
-libdoodle = { path = "./.work/libdoodle" }
+libdoodle = { path = "../libdoodle" }
