--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "dependencies": {
     "@jamescoyle/svelte-icon": "^0.1.1",
     "@mdi/js": "^7.4.47",
+    "@sveltejs/svelte-virtual-list": "^3.0.1",
     "@tailwindcss/vite": "^4.1.11",
+    "js-hex-editor": "^0.1.0",
     "tailwindcss": "^4.1.11"
   }
 }
